--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -88,7 +88,7 @@ jobs:
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Start deployment
-        uses: bobheadxi/deployments@master
+        uses: tallyb/deployments@master
         id: deployment
         with:
           step: start
@@ -108,10 +108,11 @@ jobs:
             beta-lescinskas-lt
             ./deploy/helm/lescinskas.lt
       - name: Update deployment status
-        uses: bobheadxi/deployments@master
+        uses: tallyb/deployments@master
         if: always()
         with:
           step: finish
           token: ${{ secrets.GITHUB_TOKEN }}
           status: ${{ job.status }}
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+          env_url: https://beta.lescinskas.lt
