--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -66,15 +66,54 @@ jobs:
         with:
           name: website-minified
           path: _site
-      - name: Push to GitHub Container Registry
-        uses: docker/build-push-action@v1
+      # https://github.com/docker/build-push-action/blob/master/UPGRADE.md#tags-with-ref-and-git-labels
+      - name: Prepare
+        id: prep
+        run: |
+          DOCKER_IMAGE=ghcr.io/plutzilla/lescinskas-lt-website
+          VERSION=edge
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/}
+          elif [[ $GITHUB_REF == refs/heads/* ]]; then
+            VERSION=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
+          elif [[ $GITHUB_REF == refs/pull/* ]]; then
+            VERSION=pr-${{ github.event.number }}
+          fi
+          TAGS="${DOCKER_IMAGE}:${VERSION}"
+          if [ "${{ github.event_name }}" = "push" ]; then
+            TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
+          fi
+          echo ::set-output name=version::${VERSION}
+          echo ::set-output name=tags::${TAGS}
+          echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to GHCR
+        uses: docker/login-action@v1
         with:
-          dockerfile: nginx.Dockerfile
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
-          registry: ghcr.io
-          repository: plutzilla/lescinskas-lt-website
-          tag_with_ref: true
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./nginx.Dockerfile
+          push: true
+          tags: ${{ steps.prep.outputs.tags }}
+          labels: |
+            org.opencontainers.image.source=${{ github.event.repository.html_url }}
+            org.opencontainers.image.created=${{ steps.prep.outputs.created }}
+            org.opencontainers.image.revision=${{ github.sha }}
+      # - name: Push to GitHub Container Registry
+      #   uses: docker/build-push-action@v1
+      #   with:
+      #     dockerfile: nginx.Dockerfile
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GHCR_PAT }}
+      #     registry: ghcr.io
+      #     repository: plutzilla/lescinskas-lt-website
+      #     tag_with_ref: true
   deploy-to-staging:
     name: Deploy to staging
     needs: [build, minify, publish]
