Setting Jekyll environment to production

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
         uses: docker://jekyll/minimal:4
         with:
           args: jekyll build -s src -d _site --trace
+        env:
+          JEKYLL_ENV: production
       - name: Store built website
         uses: actions/upload-artifact@v2
         with:
