Reusable build workflow

--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -5,6 +5,8 @@ on:
     types: [published]
 
 jobs:
+  build:
+    uses: ./.github/workflows/_build.yml
   deploy-to-staging:
     name: Deploy to production
     runs-on: ubuntu-20.04
