--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -1,10 +1,9 @@
 name: Build lescinskas.lt website
 
 on:
+  workflow_call:
   push:
     branches:
-      - "*"
-    tags-ignore:
       - "*"
 
 jobs:
@@ -52,3 +51,8 @@ jobs:
           key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
       - run: npm install
       - run: npx gulp
+      - name: Store minified website
+        uses: actions/upload-artifact@v2
+        with:
+          name: website-minified
+          path: _site
