--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -3,7 +3,7 @@ name: Build and deploy lescinskas.lt website to staging
 on:
   push:
     branches:
-      - "main"
+      - "master"
 
 jobs:
   build:
