--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build:
     uses: ./.github/workflows/_build.yml
+  minify:
+    uses: ./.github/workflows/_minify.yml
   deploy-to-staging:
     name: Deploy to production
     runs-on: ubuntu-20.04
