--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     uses: ./.github/workflows/_build.yml
   minify:
-    uses: ./.github/workflows/_build.yml
+    uses: ./.github/workflows/_minify.yml
   publish:
     name: Publish Docker image to GitHub Container Registry (GHCR)
     needs: [build, minify]
