--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -10,6 +10,7 @@ jobs:
     uses: ./.github/workflows/_build.yml
   minify:
     uses: ./.github/workflows/_minify.yml
+    needs: build
   publish:
     name: Publish Docker image to GitHub Container Registry (GHCR)
     needs: [build, minify]
