--- a/deploy/helm/lescinskas.lt/values.yaml
+++ b/deploy/helm/lescinskas.lt/values.yaml
@@ -45,12 +45,15 @@ service:
 
 ingress:
   enabled: true
+  className: "nginx"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: lescinskas.lt
-      paths: ['/']
+      paths:
+        - path: '/'
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
