Updated ingresses config

--- a/deploy/helm/beta-lescinskas-lt.values.yaml
+++ b/deploy/helm/beta-lescinskas-lt.values.yaml
@@ -10,5 +10,7 @@ ingress:
   annotations: {}
   hosts:
     - host: beta.lescinskas.lt
-      paths: ['/']
+      paths:
+        - path: '/'
+          pathType: ImplementationSpecific
   tls: []
