--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -84,7 +84,7 @@ jobs:
         run: doctl k8s cluster kubeconfig show do-k8s-lescinskas-lt-cluster > .kubeconfig
       - name: Get the tag
         id: get_tag
-        run: echo ::set-output name=VERSION::sha-${{ github.sha }} | cut -c1-8
+        run: echo ::set-output name=TAG::sha-${{ github.sha }} | cut -c1-12
       - name: Start deployment
         uses: tallyb/deployments@master
         id: deployment
@@ -102,7 +102,7 @@ jobs:
             --kubeconfig=.kubeconfig
             -f ./deploy/helm/beta-lescinskas-lt.values.yaml
             --set image.repository=ghcr.io/plutzilla/lescinskas-lt-website
-            --set image.tag=sha-${{ steps.get_tag.outputs.VERSION }}
+            --set image.tag=sha-${{ steps.get_tag.outputs.TAG }}
             beta-lescinskas-lt
             ./deploy/helm/lescinskas.lt
       - name: Update deployment status
