--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -36,7 +36,7 @@ jobs:
           context: .
           file: ./nginx.Dockerfile
           push: true
-          tags: ${{ github.sha }}
+          tags: ghcr.io/plutzilla/lescinskas-lt-website:${{ github.sha }}
           labels: |
             org.opencontainers.image.source=${{ github.event.repository.html_url }}
             org.opencontainers.image.created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
