--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -10,8 +10,39 @@ jobs:
   minify:
     uses: ./.github/workflows/_minify.yml
     needs: build
+  publish:
+    name: Publish Docker image to GitHub Container Registry (GHCR)
+    needs: [build, minify]
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download minified website artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: website-minified
+          path: _site
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to GHCR
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_PAT }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./nginx.Dockerfile
+          push: true
+          tags: ghcr.io/plutzilla/lescinskas-lt-website:${{ github.sha }}
+          labels: |
+            org.opencontainers.image.source=${{ github.event.repository.html_url }}
+            org.opencontainers.image.created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+            org.opencontainers.image.revision=${{ github.sha }}
   deploy-to-staging:
-    name: Deploy to production
+    name: Deploy to staging
+    needs: [build, minify, publish]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -21,9 +52,6 @@ jobs:
           token: ${{ secrets.DIGITALOCEAN_TOKEN }}
       - name: Get kubeconfig
         run: doctl k8s cluster kubeconfig show do-k8s-lescinskas-lt-cluster > .kubeconfig
-      - name: Get the tag version
-        id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Start deployment
         uses: tallyb/deployments@master
         id: deployment
@@ -41,7 +69,7 @@ jobs:
             --kubeconfig=.kubeconfig
             -f ./deploy/helm/www-lescinskas-lt.values.yaml
             --set image.repository=ghcr.io/plutzilla/lescinskas-lt-website
-            --set image.tag=${{ steps.get_version.outputs.VERSION }}
+            --set image.tag=${{ github.sha }}
             www-lescinskas-lt
             ./deploy/helm/lescinskas.lt
       - name: Update deployment status
@@ -52,4 +80,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           status: ${{ job.status }}
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
-          env_url: https://lescinskas.lt
+          env_url: https://beta.lescinskas.lt
